env/code_53bfdf656047c/stderr.txt
  File "main.py", line 2
    
               ^
IndentationError: expected an indented block
